refactor: change ArrayList.*Last() methods for backwards compatibility, update readme